Evolution et modification de la page d'accueil pour PC, ajout du footer et en attente du contenu

--- a/contenu/accueil/index.html
+++ b/contenu/accueil/index.html
@@ -61,15 +61,95 @@
         </div>
         <div id="contenu">
             <div id="information">
-                <h3>Single Rider des un site de rencontre qui permet de réunir
+                <h3><bold>Single Rider</bold> est un site de rencontre qui permet de réunir
                     des personnes passionnées par les parcs d'attractions !
                 </h3>
                 <br>
                 <h3>Vous y trouverez des annonces de membres, mais aussi <br>
-                des informations sur tous les parcs d'attractions </h3>
+                des informations sur tous les parcs d'attractions !</h3>
             </div>
             <div id="titre2">
                 <h2>Quelques annonces</h2>
             </div>
+            <div id="btn">
+                <button onclick="window.location.href='../annonces/annonces.php'">Voir d'autres annonces</button>        
+            </div>
         </div>
+        <footer>
+            <div id="colonne1">
+                <h2>Réseaux Sociaux</h2>
+                <div id="reseaux1">
+                    <h3>Single Rider</h3>
+
+                </div>
+                <div id="reseaux2">
+                    <h3>@SingleRider</h3>
+                </div>
+                <div id="reseaux3">
+                    <h3>@SingleRider</h3>
+                </div>
+                <div id="reseaux4">
+                    <h3>Single Rider</h3>
+                </div>
+                <div id="texteReseaux">
+                    <h3>Pour nous contacter rapidement ou pour voir les différentes actualités sur les rencontres de Single Rider,
+                        les réseaux sociaux sont un atout car nous répondons rapidement !
+                    </h3>
+                </div>
+            </div>
+            <div id="colonne2">
+                <h2>Explorer Single Rider</h2>
+                <div id="page1">
+                    <h3>Profil</h3>
+                </div>
+                <div id="page2">
+                    <h3>Inscription</h3>
+                </div>
+                <div id="page3">
+                    <h3>Connexion</h3>
+                </div>
+                <div id="page4">
+                    <h3>Présentation des parcs</h3>
+                </div>
+                <div id="page5">
+                    <h3>Actualités</h3>
+                </div>
+                <div id="page6">
+                    <h3>Annonces</h3>
+                </div>
+                <div id="page7">
+                    <h3>Contact</h3>
+                </div>
+            </div>
+            <div id="colonne3">
+                <h2>Contacter Single Rider</h2>
+                <div id="infos_tel">
+                    <h3>Pour toutes informations concernant le site internet où en cas de problème vous pouvez
+                        nous contacter au : 03 24 59 64 70.
+                    </h3>
+                </div>
+                <div id="infos_adresse">
+                    <h3>Pour pouvoir nous retrouver :<br>
+                    Campus Sup Ardennes, <br>9A Rue Claude Chrétien,<br>08000 Charleville-Mézières</h3>
+                </div>
+                <div id="infos_site">
+                    <h3>Pour vous rendre chez Single Rider, il suffit de longer la rue perpendiculaire de la 
+                        pataterie en sortie d'autoroute puis de tourner à gauche au bout de la rue !
+                    </h3>
+                </div>
+            </div>
+            <div id="mentionslegales">
+                <h3>Mentions légales</h3>
+            </div>
+            <div id="politique">
+                <h3>Politique de confidentialité</h3>
+            </div>
+            <div id="plansite">
+                <h3>Plan du site</h3>
+            </div>
+            <div id="cookies">
+                <h3>Protection sur la vie privée et cookies</h3>
+            </div>
+        </footer>
+</body>
 </html>
