Footer page d'accueil PC terminé, début du responsive

--- a/contenu/accueil/index.html
+++ b/contenu/accueil/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
 
 <head>
     <meta charset="utf-8">
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="#">Profil</a></li>
                     <li><a href="#">Connexion</a></li>
-                    <li><a href="#">inscription</a></li>
+                    <li><a href="#">Inscription</a></li>
                 </ul>
             </li>
             <li>
@@ -43,9 +43,6 @@
             <li><a href="#" class="an">Annonces</a></li>
         </ul>
     </nav>
-    <div class="content">
-        <header>Single Rider</header>
-    </div>
     <script>
         $('.icon').click(function () {
             $('span').toggleClass("cancel");
@@ -80,16 +77,28 @@
                 <h2>Réseaux Sociaux</h2>
                 <div id="reseaux1">
                     <h3>Single Rider</h3>
-
                 </div>
+                <div id="icon1">
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+
                 <div id="reseaux2">
                     <h3>@SingleRider</h3>
+                </div>
+                <div id="icon2">
+                    <i class="fab fa-twitter"></i>
                 </div>
                 <div id="reseaux3">
                     <h3>@SingleRider</h3>
                 </div>
+                <div id="icon3">
+                    <i class="fab fa-instagram"></i>
+                </div>
                 <div id="reseaux4">
                     <h3>Single Rider</h3>
+                </div>
+                <div id="icon4">
+                    <i class="fab fa-youtube"></i>
                 </div>
                 <div id="texteReseaux">
                     <h3>Pour nous contacter rapidement ou pour voir les différentes actualités sur les rencontres de Single Rider,
@@ -128,14 +137,30 @@
                         nous contacter au : 03 24 59 64 70.
                     </h3>
                 </div>
+                <div id="infos_telTab">
+                    <h3>03 24 59 64 70</h3>
+                </div>
+                <div id="icon1">
+                    <i class="fas fa-phone-alt"></i>                
+                </div>
                 <div id="infos_adresse">
                     <h3>Pour pouvoir nous retrouver :<br>
                     Campus Sup Ardennes, <br>9A Rue Claude Chrétien,<br>08000 Charleville-Mézières</h3>
+                </div>
+                <div id="infos_adresseTab">
+                    <h3>Campus Sup Ardennes BP,<br>9A Rue Claude Chrétien,<br>08000 Charleville-Mézières</h3>
+                </div>
+                <div id="icon2">
+                    <i class="fas fa-map-marker-alt"></i>
                 </div>
                 <div id="infos_site">
                     <h3>Pour vous rendre chez Single Rider, il suffit de longer la rue perpendiculaire de la 
                         pataterie en sortie d'autoroute puis de tourner à gauche au bout de la rue !
                     </h3>
+                </div>
+
+                <div id="icon3">
+                    <i class="fas fa-route"></i>
                 </div>
             </div>
             <div id="mentionslegales">
