--- a/contenu/accueil/index.html
+++ b/contenu/accueil/index.html
@@ -48,14 +48,9 @@
             $('span').toggleClass("cancel");
         });
     </script>
-        <div id="header">
-            <div id="imageAccueil">
-                <img src="../../images/image_accueil">
-                <div id="titre">
-                    Single Rider
-                </div>
-            </div>
-        </div>
+        <header>
+            <div id="titre">Single Rider</div>
+        </header>
         <div id="contenu">
             <div id="information">
                 <h3><bold>Single Rider</bold> est un site de rencontre qui permet de réunir
