Evolution de la page Actualités

--- a/contenu/actualites/actualites.html
+++ b/contenu/actualites/actualites.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Accueil</title>
+    <title>Actualités</title>
     <link rel="stylesheet" href="../../css/main.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="file:///E:/fontawesome/css/all.css">
@@ -37,7 +37,7 @@
                 <input type="checkbox" id="btn-2">
                 <ul>
                     <li><a href="#">Présentation des parcs</a></li>
-                    <li><a href="../actualites/actualites.html">Actualités</a></li>
+                    <li><a href="#">Actualités</a></li>
                 </ul>
             </li>
             <li><a href="#" class="an">Annonces</a></li>
@@ -48,26 +48,65 @@
             $('span').toggleClass("cancel");
         });
     </script>
-        <header id="header_accueil">
-            <div id="titre">Single Rider</div>
+        <header id="header_actualites">
+            <div id="titre">Actualités</div>
         </header>
-        <div id="contenu_accueil">
-            <div id="information">
-                <h3><bold>Single Rider</bold> est un site de rencontre qui permet de réunir
-                    des personnes passionnées par les parcs d'attractions !
-                </h3>
-                <br>
-                <h3>Vous y trouverez des annonces de membres, mais aussi <br>
-                des informations sur tous les parcs d'attractions !</h3>
-            </div>
-            <div id="titre2">
-                <h2>Quelques annonces</h2>
-            </div>
-            <div id="btn">
-                <button onclick="window.location.href='../annonces/annonces.php'">Voir d'autres annonces</button>        
+        <div id="contenu_actualites">
+            <div id="les_actualites">
+                <div id="titreactualite">
+                    <h3>Mario Kart devient réalité : "Super Nintendo
+                        World" ouvrira en février 2021 !
+                    </h3>
+                </div>
+                <div id="article_actualite">
+                    <div id="datearticle_actualite">
+                        <p>
+                            14 janvier 2021, 14h19 par Coline
+                        </p>
+                    </div>
+                    <div id="contenuarticle_actualites">
+                        <div id="imgarticle">
+                            <img src="../../images/imageArticle1.jpg">
+                        </div>
+                        Il aura fallu plusieurs années et près de 500 millions d’euros pour créer ce qui pourrait devenir
+                            l’un des univers les plus prisés du parc Universal Studios Japon, à Osaka : Super Nintendo World. Cet espace entièrement aux couleurs des
+                            jeux emblématiques de Nintendo s’annonce comme particulièrement attrayant pour les fans de la marque et ils sont nombreux.
+                            Alors que l’on avait déjà pu voir les esquisses puis des vidéos, ce sont les images officielles du lieu qui sont désormais disponibles et
+                            elles impressionnent tant le résultat est fidèle aux schémas originaux au point d’en paraitre quasi irréels. Un peu comme si un décor et un
+                            environnement initialement numériques mais devenus matériels n’attendaient plus que vous pour embarquer dans des jeux vidéos grandeur nature.</p>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!--<footer>
             <div id="colonne1">
                 <h2>Réseaux Sociaux</h2>
                 <div id="reseaux1">
@@ -170,6 +209,6 @@
             <div id="cookies">
                 <h3>Protection sur la vie privée et cookies</h3>
             </div>
-        </footer>
+        </footer>-->
 </body>
 </html>
