Début de création de la page Profil

--- a/contenu/accueil/index.html
+++ b/contenu/accueil/index.html
@@ -13,8 +13,9 @@
 
 <body>
     <nav>
-        <div class="logo"><img src="../../images/logo_menu.png"
-                alt="Logo de Single Rider avec un S jaune resprésentant les rails d'un coaster un un R bleu qui représente un train d'un coaster">
+        <div class="logo">
+            <a href="index.html"><img src="../../images/logo_menu.png"
+            alt="Logo de Single Rider avec un S jaune resprésentant les rails d'un coaster un un R bleu qui représente un train d'un coaster"></a>
         </div>
         <label for="btn" class="icon">
             <span class="fa fa-bars"></span>
@@ -26,7 +27,7 @@
                 <a href="#">Mon compte</a>
                 <input type="checkbox" id="btn-1">
                 <ul>
-                    <li><a href="#">Profil</a></li>
+                    <li><a href="../profil/profil.html">Profil</a></li>
                     <li><a href="#">Connexion</a></li>
                     <li><a href="#">Inscription</a></li>
                 </ul>
