Evolution de la mage modifier son profil

--- a/contenu/profil/modifierprofil.html
+++ b/contenu/profil/modifierprofil.html
@@ -49,39 +49,166 @@
             $('span').toggleClass("cancel");
         });
     </script>
-    <div id="contenu_modif1">
-        <div id="modif_imagePDP">
-            <img src="../../images/Baptiste.jpg">
+        <form method="post" enctype="multipart/form-data">
+        <div id="contenu_modif1">
+            <div id="modif_imagePDP">
+                <img src="../../images/Baptiste.jpg">
+            </div>
+            <div id="modif_imgbanniere">
+                <img src="../../images/banner.jpg">
+            </div>
+            <div id="modif_pdp">
+                Modifier ma photo de profil
+            </div>
+            <div id="modif_banniere">
+                Modifier ma bannière
+            </div>
+            <div id="modif_nom">
+                Modifier mon nom
+            </div>
+            <div id="modif_prenom">
+                Modifier mon prenom
+            </div>
+            <div id="modif_bio">
+                Modifier ma bio
+            </div>
         </div>
-        <div id="modif_imgbanniere">
-            <img src="../../images/banner.jpg">
+        <div id="contenu_modif2">
+            <div id="texte_bio">
+                <textarea></textarea>
+            </div>
+            <div id="titreInformations">
+                Mes informations
+            </div>
+            <div id="adressemail_modif">
+                Adresse mail : <textarea></textarea>
+            </div>
+            <div id="datenaissance_modif">
+                Date de naissance : <input type="date">
+            </div>
+            <div id="titre_mdp">
+                Modifier son mot de passe
+            </div>
+            <div id="ancienmdp_modif">
+                Ancien mot de passe :
+            </div>
+            <div id="newmdp_modif">
+                Nouveau mot de passe :
+            </div>
+            <div id="confirmnewnmdp_modif">
+                Confirmation du nouveau mot de passe :
+            </div>
+            <div id="deco_modif">
+                Déconnexion
+            </div>
+            <div id="supprcompte_modif">
+                Supprimer le compte
+            </div>
         </div>
-        <div id="modif_pdp">
-            Modifier ma photo de profil
+    </form>
+    <footer>
+        <div id="colonne1">
+            <h2>Réseaux Sociaux</h2>
+            <div id="reseaux1">
+                <h3>Single Rider</h3>
+            </div>
+            <div id="icon1">
+                <i class="fab fa-facebook-square"></i>
+            </div>
+
+            <div id="reseaux2">
+                <h3>@SingleRider</h3>
+            </div>
+            <div id="icon2">
+                <i class="fab fa-twitter"></i>
+            </div>
+            <div id="reseaux3">
+                <h3>@SingleRider</h3>
+            </div>
+            <div id="icon3">
+                <i class="fab fa-instagram"></i>
+            </div>
+            <div id="reseaux4">
+                <h3>Single Rider</h3>
+            </div>
+            <div id="icon4">
+                <i class="fab fa-youtube"></i>
+            </div>
+            <div id="texteReseaux">
+                <h3>Pour nous contacter rapidement ou pour voir les différentes actualités sur les rencontres de Single Rider,
+                    les réseaux sociaux sont un atout car nous répondons rapidement !
+                </h3>
+            </div>
         </div>
-        <div id="modif_banniere">
-            Modifier ma bannière
+        <div id="colonne2">
+            <h2>Explorer Single Rider</h2>
+            <div id="page1">
+                <h3>Profil</h3>
+            </div>
+            <div id="page2">
+                <h3>Inscription</h3>
+            </div>
+            <div id="page3">
+                <h3>Connexion</h3>
+            </div>
+            <div id="page4">
+                <h3>Présentation des parcs</h3>
+            </div>
+            <div id="page5">
+                <h3>Actualités</h3>
+            </div>
+            <div id="page6">
+                <h3>Annonces</h3>
+            </div>
+            <div id="page7">
+                <h3>Contact</h3>
+            </div>
         </div>
-        <div id="modif_nom">
-            Modifier mon nom
+        <div id="colonne3">
+            <h2>Contacter Single Rider</h2>
+            <div id="infos_tel">
+                <h3>Pour toutes informations concernant le site internet où en cas de problème vous pouvez
+                    nous contacter au : 03 24 59 64 70.
+                </h3>
+            </div>
+            <div id="infos_telTab">
+                <h3>03 24 59 64 70</h3>
+            </div>
+            <div id="icon1">
+                <i class="fas fa-phone-alt"></i>                
+            </div>
+            <div id="infos_adresse">
+                <h3>Pour pouvoir nous retrouver :<br>
+                Campus Sup Ardennes, <br>9A Rue Claude Chrétien,<br>08000 Charleville-Mézières</h3>
+            </div>
+            <div id="infos_adresseTab">
+                <h3>Campus Sup Ardennes BP,<br>9A Rue Claude Chrétien,<br>08000 Charleville-Mézières</h3>
+            </div>
+            <div id="icon2">
+                <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <div id="infos_site">
+                <h3>Pour vous rendre chez Single Rider, il suffit de longer la rue perpendiculaire de la 
+                    pataterie en sortie d'autoroute puis de tourner à gauche au bout de la rue !
+                </h3>
+            </div>
+
+            <div id="icon3">
+                <i class="fas fa-route"></i>
+            </div>
         </div>
-        <div id="modif_prenom">
-            Modifier mon prenom
+        <div id="mentionslegales">
+            <h3>Mentions légales</h3>
         </div>
-        <div id="modif_bio">
-            Modifier ma bio
+        <div id="politique">
+            <h3>Politique de confidentialité</h3>
         </div>
-    </div>
-    <div id="contenu_modif2">
-        <div id="texte_bio">
-            <textarea></textarea>
+        <div id="plansite">
+            <h3>Plan du site</h3>
         </div>
-        <div id="titreInformations">
-            Mes informations
+        <div id="cookies">
+            <h3>Protection sur la vie privée et cookies</h3>
         </div>
-        <div id="adressemail_modif">
-            Adresse mail : <textarea></textarea>
-        </div>
-    </div>
+    </footer>
 </body>
 </html>
