Modification du responsive

--- a/contenu/accueil/index.html
+++ b/contenu/accueil/index.html
@@ -68,7 +68,7 @@
                 <button onclick="window.location.href='../annonces/annonces.php'">Voir d'autres annonces</button>        
             </div>
         </div>
-        <footer>
+        <div id="footer">
             <div id="colonne1">
                 <h2>Réseaux Sociaux</h2>
                 <div id="reseaux1">
@@ -171,6 +171,6 @@
             <div id="cookies">
                 <h3>Protection sur la vie privée et cookies</h3>
             </div>
-        </footer>
+        </div>
 </body>
 </html>
