Page inscription réussie

--- a/contenu/profil/profil.html
+++ b/contenu/profil/profil.html
@@ -28,8 +28,8 @@
                 <input type="checkbox" id="btn-1">
                 <ul>
                     <li><a href="../profil/profil.html">Profil</a></li>
-                    <li><a href="#">Connexion</a></li>
-                    <li><a href="#">Inscription</a></li>
+                    <li><a href="../connexion/connexion.php">Connexion</a></li>
+                    <li><a href="../inscription/inscription.php">Inscription</a></li>
                 </ul>
             </li>
             <li>
